fixed footer overlap on profile page

--- a/static/style.css
+++ b/static/style.css
@@ -229,6 +229,7 @@ input:checked + .slider:before {
 }
 .profile-container{
   text-align: center;
+  padding-bottom: 50px;
 }
 .profile-pic{
   text-align: center;
